# halifax-rdh-data

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: index.html  murb.db
notebooks/: 01_explore.ipynb
schema_mappings/: default.yaml
src/murb_db/: __init__.py  __main__.py  config.py  export_dashboard.py  ingest.py  parsers.py  query.py  registry.py  schema.py  viz.py
tests/: conftest.py  test_ingest.py  test_query.py  test_schema.py
